<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about_notification">About notification</string>
    <string name="about_this_app">About this app</string>
    <string name="absolute_time">Absolute time</string>
    <string name="account_setting">Account setting</string>
    <string name="accounts">Accounts</string>
    <string name="add_account">Add account</string>
    <string name="add_mute_">Add mute...</string>
    <string name="added_to_saved_search">Added to saved search.</string>
    <string name="android_4_4_or_later">(Android 4.4 or later)</string>
    <string name="animation">Animation</string>
    <string name="appearance_settings">Appearance settings</string>
    <string name="application_restart_is_required">(Application restart is required)</string>
    <string name="are_you_sure_you_want_to_block_this_user_">Are you sure you want to block this user?</string>
    <string name="are_you_sure_you_want_to_delete_this_message_s">"Are you sure you want to delete this message?

%s"</string>
    <string name="are_you_sure_you_want_to_delete_this_tweet_s">"Are you sure you want to delete this tweet?

%s"</string>
    <string name="are_you_sure_you_want_to_delete_this_user_list_">Are you sure you want to delete this user list?</string>
    <string name="are_you_sure_you_want_to_remove_this_account_">Are you sure you want to remove this account?</string>
    <string name="are_you_sure_you_want_to_report_this_user_">Are you sure you want to report this user?</string>
    <string name="are_you_sure_you_want_to_unblock_this_user_">Are you sure you want to unblock this user?</string>
    <string name="are_you_sure_you_want_to_unfollow_this_user_">Are you sure you want to unfollow this user?</string>
    <string name="background_download">Background download</string>
    <string name="background_icon">Background icon</string>
    <string name="bio">Bio</string>
    <string name="block">Block</string>
    <string name="blocking_">Blocking...</string>
    <string name="cache_video_to_storage">Cache video to storage.</string>
    <string name="cancel">Cancel</string>
    <string name="change_notification_sound">Change notification sound</string>
    <string name="check_permission">Check permission</string>
    <string name="clickable_links">Clickable links</string>
    <string name="client_s">Client: %s</string>
    <string name="clients">Clients</string>
    <string name="color_scheme">Color scheme</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_dialog">Confirm dialog</string>
    <string name="connect_to_twitter">Connect to Twitter</string>
    <string name="connected_to_stream">Connected to stream.</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="create_screenname_directory">Create ScreenName directory</string>
    <string name="day">d</string>
    <string name="delete">Delete</string>
    <string name="delete_these_items_">Delete these items?</string>
    <string name="delete_this_item_">Delete this item?</string>
    <string name="delete_this_saved_search">Delete this saved search</string>
    <string name="delete_this_saved_search_">Delete this saved search?</string>
    <string name="deleted">Deleted.</string>
    <string name="description">Description</string>
    <string name="disconnect_from_userstream_you_can_change_this_timer_by_settings">"Disconnect from UserStream.
(You can change this timer by settings.)"</string>
    <string name="disconnected_from_stream">Disconnected from stream.</string>
    <string name="disconnecting_from_stream_">Disconnecting from stream...</string>
    <string name="dont_show_again">"Don't show again"</string>
    <string name="download">Download</string>
    <string name="download_settings">Download settings</string>
    <string name="downloaded">Downloaded.</string>
    <string name="downloading_">Downloading...</string>
    <string name="dual_timeline">Dual Timeline</string>
    <string name="dual_timeline_mode">Dual timeline mode</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit profile</string>
    <string name="error_code_032">Could not authenticate you.</string>
    <string name="error_code_034">Sorry, that page does not exist.</string>
    <string name="error_code_064">Your account is suspended.</string>
    <string name="error_code_068">The Twitter REST API v1 is no longer active.</string>
    <string name="error_code_088">"Rate limit exceeded.
Reset: %s"</string>
    <string name="error_code_089">Invalid or expired token.</string>
    <string name="error_code_092">SSL connection is required.</string>
    <string name="error_code_130">Twitter is over capacity.</string>
    <string name="error_code_131">Internal error.</string>
    <string name="error_code_135">"Could not authenticate you.
Please adjust to the correct time."</string>
    <string name="error_code_161">You are unable to follow more people at this time.</string>
    <string name="error_code_179">Sorry, you are not authorized to see this status.</string>
    <string name="error_code_185">User is over daily status update limit.</string>
    <string name="error_code_187">Status is a duplicate.</string>
    <string name="error_code_215">Bad authentication data.</string>
    <string name="error_code_226">This request looks like it might be automated.</string>
    <string name="error_code_231">User must verify login.</string>
    <string name="error_code_251">This endpoint has been retired.</string>
    <string name="error_code_261">Application cannot perform write actions.</string>
    <string name="error_code_271">You can’t mute yourself.</string>
    <string name="error_code_272">You are not muting the specified user.</string>
    <string name="error_code_unknown">Unknown error.</string>
    <string name="error_http_400">Bad request.</string>
    <string name="error_http_401">Authentication required.</string>
    <string name="error_http_403">Request refused.</string>
    <string name="error_http_404">Not found.</string>
    <string name="error_http_406">Invalid query format.</string>
    <string name="error_http_410">The Twitter REST API v1 is no longer active.</string>
    <string name="error_http_420">API rate limit exceeded.</string>
    <string name="error_http_422">Unprocessable entity.</string>
    <string name="error_http_429">Too many requests.</string>
    <string name="error_http_500">Twitter is over capacity.</string>
    <string name="error_http_502">Twitter is over capacity.</string>
    <string name="error_http_503">Twitter is over capacity.</string>
    <string name="font_size">Font size</string>
    <string name="format_of_rt_by">"Format of 'RT by'"</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="general_settings">General settings</string>
    <string name="get_users_who_you_are_following">Get users who you are following</string>
    <string name="heart">♥</string>
    <string name="hide_action_bar">Hide action bar</string>
    <string name="hide_navigation_bar">Hide navigation bar</string>
    <string name="hint_text">Hint text</string>
    <string name="icon_quality">Icon quality</string>
    <string name="it_will_work_when_streaming_is_enabled">It will work when streaming is enabled.</string>
    <string name="item_appearance">Item appearance</string>
    <string name="keep_screen_on_while_streaming">Keep screen on while streaming</string>
    <string name="keep_timeline_position">Keep timeline position</string>
    <string name="key_settings">Key settings</string>
    <string name="launch_camera">Launch camera</string>
    <string name="like">Like</string>
    <string name="likes">Likes</string>
    <string name="location">Location</string>
    <string name="low_bandwidth_mode">Low bandwidth mode</string>
    <string name="mentions">Mentions</string>
    <string name="messages">Messages</string>
    <string name="mute_replies_from_user_who_you_not_follow">Mute replies from user who you not follow. (Application restart is required)</string>
    <string name="mute_settings">Mute settings</string>
    <string name="name">Name</string>
    <string name="notification_settings">Notification settings</string>
    <string name="notification_sound">Notification sound</string>
    <string name="off_timer">Off timer</string>
    <string name="only_people_you_follow">Only people you follow</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="optional">Optional</string>
    <string name="post">Post</string>
    <string name="private_list">Private list</string>
    <string name="profile_settings">Profile settings</string>
    <string name="public_list">Public list</string>
    <string name="quit">Quit</string>
    <string name="retweet">Retweet</string>
    <string name="retweets">Retweets</string>
    <string name="search_settings">Search settings</string>
    <string name="settings">Settings</string>
    <string name="shortcut_to_launch_camera">Shortcut to launch camera</string>
    <string name="shortcut_to_tweet">Shortcut to tweet</string>
    <string name="show_clients">Show clients</string>
    <string name="show_screenname">Show ScreenName</string>
    <string name="single_line">Single line</string>
    <string name="single_line_mode">Single line mode</string>
    <string name="splash_screen">Splash screen</string>
    <string name="split_vertically">Split vertically</string>
    <string name="step_1_tap_connect_to_twitter">"Step 1:ap 'Connect to Twitter'."</string>
    <string name="step_2_launch_sobacha_again_and_enter_7digits_pin">Step 2:aunch MateCha again, and enter 7-digits PIN.</string>
    <string name="store_timeline">Store timeline</string>
    <string name="system_settings">System settings</string>
    <string name="theme">Theme</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="thumbnails">Thumbnails</string>
    <string name="timeline_settings">Timeline settings</string>
    <string name="touchable_scroll_bar">Touchable scroll bar</string>
    <string name="tweet">Tweet</string>
    <string name="tweet_settings">Tweet settings</string>
    <string name="tweets_per_load_timeline">Tweets per load Timeline</string>
    <string name="users">Users</string>
    <string name="web">Web</string>
    <string name="word_wrap">Word wrap</string>
    <string name="words">Words</string>
    <string name="app_package_name">net.wakamesoba98.matecha</string>
</resources>