<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/notification_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/notification_settings">
        <Preference android:title="@string/about_notification" android:key="pref_notification_caution" android:summary="@string/it_will_work_when_streaming_is_enabled" />
        <CheckBoxPreference android:title="@string/mentions" android:key="pref_notify_mention" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/retweets" android:key="pref_notify_retweeted" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/likes" android:key="pref_notify_favorited" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/messages" android:key="pref_notify_message" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notification_sound">
        <CheckBoxPreference android:title="@string/notification_sound" android:key="pref_use_notification_sound" android:defaultValue="false" />
        <Preference android:title="@string/change_notification_sound" android:key="pref_change_notification_sound" android:dependency="pref_use_notification_sound" />
    </PreferenceCategory>
</PreferenceScreen>