<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/mute_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/mute_settings">
        <Preference android:title="@string/words">
            <intent android:targetPackage="@string/app_package_name" android:action="android.intent.action.VIEW" android:data="sobachapref://words" android:targetClass="net.wakamesoba98.sobacha.view.activity.MutePreferenceActivity" />
        </Preference>
        <Preference android:title="@string/users">
            <intent android:targetPackage="@string/app_package_name" android:action="android.intent.action.VIEW" android:data="sobachapref://users" android:targetClass="net.wakamesoba98.sobacha.view.activity.MutePreferenceActivity" />
        </Preference>
        <Preference android:title="@string/clients">
            <intent android:targetPackage="@string/app_package_name" android:action="android.intent.action.VIEW" android:data="sobachapref://clients" android:targetClass="net.wakamesoba98.sobacha.view.activity.MutePreferenceActivity" />
        </Preference>
        <Preference android:title="@string/thumbnails">
            <intent android:targetPackage="@string/app_package_name" android:action="android.intent.action.VIEW" android:data="sobachapref://thumbs" android:targetClass="net.wakamesoba98.sobacha.view.activity.MutePreferenceActivity" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/only_people_you_follow">
        <Preference android:title="@string/get_users_who_you_are_following" android:key="pref_get_following_list" />
        <CheckBoxPreference android:title="@string/only_people_you_follow" android:key="pref_mute_mention_from_not_following" android:summary="@string/mute_replies_from_user_who_you_not_follow" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>