<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings">
        <PreferenceScreen android:title="@string/general_settings">
            <intent android:targetPackage="@string/app_package_name" android:action="android.intent.action.VIEW" android:data="sobachapref://1" android:targetClass="net.wakamesoba98.sobacha.view.activity.AppPreferenceActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/tweet_settings">
            <intent android:targetPackage="@string/app_package_name" android:action="android.intent.action.VIEW" android:data="sobachapref://2" android:targetClass="net.wakamesoba98.sobacha.view.activity.AppPreferenceActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/appearance_settings">
            <intent android:targetPackage="@string/app_package_name" android:action="android.intent.action.VIEW" android:data="sobachapref://3" android:targetClass="net.wakamesoba98.sobacha.view.activity.AppPreferenceActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/timeline_settings">
            <intent android:targetPackage="@string/app_package_name" android:action="android.intent.action.VIEW" android:data="sobachapref://4" android:targetClass="net.wakamesoba98.sobacha.view.activity.AppPreferenceActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/search_settings">
            <intent android:targetPackage="@string/app_package_name" android:action="android.intent.action.VIEW" android:data="sobachapref://5" android:targetClass="net.wakamesoba98.sobacha.view.activity.AppPreferenceActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/mute_settings">
            <intent android:targetPackage="@string/app_package_name" android:action="android.intent.action.VIEW" android:data="sobachapref://7" android:targetClass="net.wakamesoba98.sobacha.view.activity.AppPreferenceActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/download_settings">
            <intent android:targetPackage="@string/app_package_name" android:action="android.intent.action.VIEW" android:data="sobachapref://8" android:targetClass="net.wakamesoba98.sobacha.view.activity.AppPreferenceActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/profile_settings">
            <intent android:targetPackage="@string/app_package_name" android:action="android.intent.action.VIEW" android:targetClass="net.wakamesoba98.sobacha.view.activity.ProfileEditActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/notification_settings">
            <intent android:targetPackage="@string/app_package_name" android:action="android.intent.action.VIEW" android:data="sobachapref://6" android:targetClass="net.wakamesoba98.sobacha.view.activity.AppPreferenceActivity" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_this_app">
        <Preference android:key="pref_about" android:summary="by wakamesoba98 - @SobaChaDev\nPowered by Twitter4J" />
        <Preference android:title="@string/open_source_licenses" android:key="pref_open_source_licences">
            <intent android:targetPackage="@string/app_package_name" android:action="android.intent.action.VIEW" android:targetClass="net.wakamesoba98.sobacha.view.activity.LicenseActivity" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>