<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/textViewUserListName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/name" />
    <EditText android:id="@id/editTextUserListName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:layout_below="@id/textViewUserListName" />
    <TextView android:id="@id/textViewUserListDescription" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/description" android:layout_below="@id/editTextUserListName" />
    <EditText android:id="@id/editTextUserListDescription" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/optional" android:layout_below="@id/textViewUserListDescription" />
    <RadioGroup android:orientation="horizontal" android:id="@id/radioGroup" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:layout_below="@id/editTextUserListDescription">
        <RadioButton android:id="@id/radioButtonPublic" android:layout_width="0.0dip" android:layout_height="wrap_content" android:checked="true" android:text="@string/public_list" android:layout_weight="1.0" />
        <RadioButton android:id="@id/radioButtonPrivate" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/private_list" android:layout_weight="1.0" />
    </RadioGroup>
</RelativeLayout>