<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/step_1_tap_connect_to_twitter" />
            <Button android:id="@id/buttonLogin" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/connect_to_twitter" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/step_2_launch_sobacha_again_and_enter_7digits_pin" />
        </LinearLayout>
    </ScrollView>
    <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:layout_alignParentBottom="true" layout="@layout/card_pin" />
</RelativeLayout>