<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:tag="layout/profile_activity_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginTop="@dimen/activity_vertical_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:layout_marginBottom="@dimen/activity_vertical_margin">
            <net.wakamesoba98.sobacha.view.imageview.RecyclableImageButton android:id="@id/buttonChangeProfileImage" android:tag="binding_1" android:layout_width="72.0dip" android:layout_height="72.0dip" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/name" />
            <EditText android:id="@id/editTextProfileName" android:tag="binding_2" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/location" />
            <EditText android:id="@id/editTextProfileLocation" android:tag="binding_3" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/web" />
            <EditText android:id="@id/editTextProfileUrl" android:tag="binding_4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textUri" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/bio" />
            <EditText android:id="@id/editTextProfileDescription" android:tag="binding_5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:ems="10" android:inputType="textMultiLine" />
            <TextView android:layout_width="fill_parent" android:layout_height="48.0dip" />
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton android:id="@id/buttonUpdateProfile" android:tag="binding_6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:src="@drawable/accept_light" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
</RelativeLayout>